--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Nagwa</string>
+
+    <string name="error">Error!</string>
+    <string name="internet_error_message">Internet Error!</string>
+    <string name="time_out_message">Connection Error!</string>
 </resources>
