--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="error">Error!</string>
     <string name="internet_error_message">Internet Error!</string>
     <string name="time_out_message">Connection Error!</string>
+
+    <string name="loading">Loading…</string>
+    <string name="download">Download</string>
+    <string name="progress">Progress</string>
+
+    <string name="title">Title: %s</string>
+    <string name="url">Url: %s</string>
+    <string name="downloading">Downloading</string>
 </resources>
